# openapi.yml
@@ -311,6 +311,10 @@ paths:
         schema:
           type: string
       - in: query
+        name: downstreams
+        schema:
+          type: string
+      - in: query
         name: el_match
         schema:
           type: string
@@ -413,6 +417,10 @@ paths:
           type: string
       - in: query
         name: purl
+        schema:
+          type: string
+      - in: query
+        name: re_downstreams
         schema:
           type: string
       - in: query
@@ -562,48 +570,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Component'
           description: ''
-  /api/v1/components/{uuid}/provides:
-    get:
-      operationId: v1_components_provides_retrieve
-      description: List a Component's provides, using pagination when needed.
-      parameters:
-      - in: path
-        name: uuid
-        schema:
-          type: string
-          format: uuid
-        description: A UUID string identifying this component.
-        required: true
-      tags:
-      - v1
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Component'
-          description: ''
-  /api/v1/components/{uuid}/sources:
-    get:
-      operationId: v1_components_sources_retrieve
-      description: List a Component's sources, using pagination when needed.
-      parameters:
-      - in: path
-        name: uuid
-        schema:
-          type: string
-          format: uuid
-        description: A UUID string identifying this component.
-        required: true
-      tags:
-      - v1
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Component'
-          description: ''
   /api/v1/components/{uuid}/taxonomy:
     get:
       operationId: v1_components_taxonomy_retrieve
@@ -653,27 +619,6 @@ paths:
               $ref: '#/components/schemas/Component'
       security:
       - tokenAuth: []
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Component'
-          description: ''
-  /api/v1/components/{uuid}/upstreams:
-    get:
-      operationId: v1_components_upstreams_retrieve
-      description: List a Component's upstreams, using pagination when needed.
-      parameters:
-      - in: path
-        name: uuid
-        schema:
-          type: string
-          format: uuid
-        description: A UUID string identifying this component.
-        required: true
-      tags:
-      - v1
       responses:
         '200':
           content:
@@ -1550,15 +1495,12 @@ components:
           readOnly: true
         sources:
           type: string
-          format: uri
           readOnly: true
         provides:
           type: string
-          format: uri
           readOnly: true
         upstreams:
           type: string
-          format: uri
           readOnly: true
         manifest:
           type: string
